--- a/pages/about/about.css
+++ b/pages/about/about.css
@@ -125,6 +125,6 @@ text-decoration-skip-ink: none;
 
 @media(width:390px; height:844px; ){
   .head__h1{
-    padding-left: 24px;
+    padding-right: 24px;
   }
 }
